[package]
name = "hyper-fs"
version = "0.1.0"
authors = ["biluohc <biluohc@qq.com>"]

[profile.release]
opt-level = 3
# lto = true
# debug = true

[features]
default = ["mime_guess"]

[dependencies]
mime_guess = { version = "^2.0.0-alpha.3", optional = true }
futures-cpupool= "^0.1.7"
tokio-core = "^0.1.10"
futures ="^0.1.17"
walkdir = "^2.0.1"
hyper = "^0.11.8"
bytes = "^0.4.5"
url = "^1.6.0"
log = "^0.3.8"

[dev-dependencies]
mxo_env_logger = "^0.1"
num_cpus = "^1.2.1"