[package]
name = "hyper-fs"
version = "0.2.0"
authors = ["biluohc <biluohc@qq.com>"]
description = "Static File Service for hyper 0.11+."
repository = "https://github.com/biluohc/hyper-fs"
documentation = "https://docs.rs/hyper-fs"
license = "BSD-3-Clause"
exclude = ["fn.jpg"]
keywords = ["hyper","staticfile"]

[profile.release]
opt-level = 3
# lto = true
# debug = true

[badges]
travis-ci = { repository = "biluohc/hyper-fs" }

[features]
default = ["mime_guess"]

[dependencies]
mime_guess = { version = "^2.0.0-alpha.3", optional = true }
futures-cpupool= "^0.1.7"
tokio-core = "^0.1.10"
futures ="^0.1.17"
walkdir = "^2.0.1"
hyper = "^0.11.8"
bytes = "^0.4.5"
cfg-if = "0.1"
url = "^1.6.0"
log = "^0.3.8"

[dev-dependencies]
mxo_env_logger = "^0.1"
num_cpus = "^1.2.1"
reqwest = "0.8"
mime = "^0.3"
